tests/typing/bad/testfile-context_ifelse-1.scala
class A { def m() { if (true) { var x = 1 } else x = 2 } }
object Main { def main(args: Array[String]) { } }
